sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: type mismatch;
 found   : Int(0)
 required: scala.collection.generic.CanBuildFrom[Nothing,Int,?]
	for  (i<- 0 to getNombreValeurs()-2 to 0 by -1) {
                                               ^